# ChangeLog for sys-apps/pause
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pause-9999 (20 Feb 2013)

  20 Feb 2013; Michael Weber <xmw@gentoo.org> +pause-9999.ebuild,
  +metadata.xml:
  Initial import
