@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST pause-0.9.0.tar.gz 10246 SHA256 f16eb8bbb95da2d75689bd92d6b08c4adca733bbc8e185bb5faa0b303e7db087 SHA512 58c62ee80be994d31b7dde86d1a3141b2ed50fdd50c0d7cca19f2ba009e45f8be82c161f11d8347ed34936956c1b2f736fb9182bb4e7b421730b336302f82432 WHIRLPOOL ec4060f18216d74f970e53e9fa21fdce82f37384947ebe7383e7e09ff59f4a7e3f50b2827eca9f57476e4316a0fa468ab1de87d5c0ed09e4cb88aed1555481b5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlEkaO0ACgkQknrdDGLu8JB+zQD/bu/qE45duGlO9XIASkxfVU2l
+PgK6bnaYgoibKSyJr6QA/A5iwEdKHOB0qqVKhO4eqYXq4sZ8fwXPJbFgfIQryEx1
+=4OU4
+-----END PGP SIGNATURE-----
