@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*pause-0.9.0 (20 Feb 2013)
+
+  20 Feb 2013; Michael Weber <xmw@gentoo.org> +pause-0.9.0.ebuild,
+  pause-9999.ebuild:
+  Add tagged version, fix KEYWORDS
+
 *pause-9999 (20 Feb 2013)
 
   20 Feb 2013; Michael Weber <xmw@gentoo.org> +pause-9999.ebuild,
